--- a/webproject/index.html
+++ b/webproject/index.html
@@ -11,20 +11,22 @@
 <body>
     <div id="header">
         <div class="container">
-            <nav>
+            <nav>   
                 <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="#header">Anasayfa</a></li>
-                    <li><a href="#about">Hakkında</a></li>
-                    <li><a href="#CV">Özgeçmiş</a></li>
-                    <li><a href="#">Şehrim</a></li>
-                    <li><a href="#">Mirasımız</a></li>
-                    <li><a href="#contact">İletişim</a></li>
-                    <li><a href="#">Giriş Yap / Kaydol</a></li>
+                    <li><a href="index.html">Anasayfa</a></li>
+                    <li><a href="hakkinda.html">Hakkında</a></li>
+                    <li><a href="cv.html">Özgeçmiş</a></li>
+                    <li><a href="sehrimiz.html">Şehrim</a></li>
+                    <li><a href="mirasımız.html">Mirasımız</a></li>
+                    <li><a href="iletisim.html">İletişim</a></li>
+                    <li><a href="kaydol.html">Giriş Yap / Kaydol</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
+
+        
             <div class="header-text">
                 <p> Design</p>
                 <h1> Merhaba<br><span> Kerem Yunus Parlakyiğit</span>'in kişisel<br></s>web sitesine hoşgeldiniz <br> </h1>
@@ -36,7 +38,6 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png">                 
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">Benim Hakkımda</h1>
@@ -122,9 +123,7 @@
               </div>
          </div>
     </div>
-    <div class="copyright">
-        <p>Kopya hakları</p>
-    </div>
+
 </div>
 <script>
 
