--- a/webproject/sehrimiz.html
+++ b/webproject/sehrimiz.html
@@ -1,78 +1,165 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kişisel Portfolio Website</title>
-    <link rel="stylesheet" href="stylesehrimiz.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/27c32d15b7.js" crossorigin="anonymous"></script>
-   
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kişisel Portfolio Website</title>
+  <link rel="stylesheet" href="stylesehrimiz.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/27c32d15b7.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-    <div id="header">
-        <div class="container">
-            <nav>
-                <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" class="logo">
-                <ul id="sidemenu">
-                    <li><a href="index.html">Anasayfa</a></li>
-                    <li><a href="hakkinda.html">Hakkında</a></li>
-                    <li><a href="cv.html">Özgeçmiş</a></li>
-                    <li><a href="sehrimiz.html">Şehrim</a></li>
-                    <li><a href="mirasımız.html">Mirasımız</a></li>
-                    <li><a href="iletisim.html">İletişim</a></li>
-                    <li><a href="kaydol.html">Giriş Yap / Kaydol</a></li>
-                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
+  <div id="header">
+    <div class="container">
+      <nav>
+        <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" class="logo">
+        <ul id="sidemenu">
+          <li><a href="index.html">Anasayfa</a></li>
+          <li><a href="hakkinda.html">Hakkında</a></li>
+          <li><a href="cv.html">Özgeçmiş</a></li>
+          <li><a href="sehrimiz.html">Şehrim</a></li>
+          <li><a href="mirasımız.html">Mirasımız</a></li>
+          <li><a href="iletisim.html">İletişim</a></li>
+          <li><a href="kaydol.html">Giriş Yap / Kaydol</a></li>
+          <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
 
-                </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
-            </nav>
-        </div>
+        </ul>
+        <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+      </nav>
     </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/background.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/background.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/background.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/background.png" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+  </div>
+  <div class="header-text">
+    <h1>Eskişehir</h1>
+    <h4>Tarihçesi:</h4>
+    <p> Eskişehir Porsuk Çayı’nın içinden geçtiği düz bir arazide konumlanmıştır. M.Ö. 1460’larda Hititler’in burada bir
+      yerleşim kurdukları düşünülmektedir. M.Ö 700’de yönetime gelen Frigyalılar ise, Dorylaeum’u kurmuşlar. Şehir
+      ilerleyen yıllarda Romalıların ve Celtler’in kontrolüne geçmiş. Bir rivayete göre buraya ilk gelenler, kendilerine
+      yerleşmek için uygun bölgeyi seçebilmek adına Porsuk Nehri’nin etrafında değişik yerlere koyun akciğeri ve
+      karaciğeri asmışlar. Çürümeden en uzun süre dayanan ciğerin olduğu yeri seçmekmiş amaç. Yerleşim için belirlenen
+      ilk en uygun bölge, günümüz Odunpazarı mevkii ve daha sonraları Dorylaeum şehri olan Sarhöyük olmuş. Eskişehir,
+      Ortaçağ’a kadar Dorylaion ve Doryllaeum adlarıyla anılmış. Friglerin ardından sırasıyla Lidyalıların, Perslerin,
+      Makedonların ve Romalıların egemenliği altına giren Eskişehir, 1074 yılında Selçukluların eline geçmiştir. O
+      dönemde Sultanönü adıyla bilinen kent, mimari açıdan bir hayli gelişmiştir.
+
+    <p>Bizans döneminde kentte üç önemli yerleşim alanı karşımıza çıkmaktadır. Bunlar Dorylaion denilen bölge, buranın 3
+      kilometre batısında, günümüzde Hamamyolu olarak bilinen kaplıcalar bölgesi (Ilıca) ve kentin 11 kilometre kuzey
+      batısında bulunan Karacahisar Kalesinin bulunduğu bölgedir. Kalede gerçekleştirilen kazı çalışmaları ve çıkan
+      Bizans sikkeleri, kalenin 7-11. yüzyıl arasında iskan olduğunu ve bunun Geç Bizans’a kadar neredeyse kesintisiz
+      olarak devam ettiğini göstermektedir. Osman Bey Söğüt’e yerleştikten sonra Karacahisar Tekfuru ile savaşmış onu
+      yenerek 1288 yılında Karacahisar Kalesini almıştır. Karacaşehir’deki ilk yerleşimin ise Karacahisar’ın Osmanlılar
+      tarafından fethedilmesinden sonraki bir dönemde olduğu düşünülmektedir. Osmanlı kaynaklarında Karacahisar ve
+      Karacaşehir’in adlarının zaman zaman bir biri yerine kullanıldığı görülmektedir. Karacahisar Kalesinin önemli bir
+      uç kalesi olduğu, 1299 yılında ilk hutbenin okutularak Osmanlı Beyliği’nin kurulduğu ve ilk gümüş sikkenin
+      bastırıldığı yer olduğu çeşitli kroniklerde belirtilmektedir.</p>
+
+    <p>Kent bugünkü adını Türklerin bölgeye yerleşmesiyle almıştır. Buradaki antik şehrin kalıntılarına bakarak, bölgeye
+      “eski şehir” demişler. Adının aksine kendini sürekli yenileyen şehir, Hitit uygarlığından izlere ve özellikle
+      Frigya Krallığı’ndan birçok kalıntıya sahiptir.
+
+      Şehir, 1877-1878 Osmanlı - Rus Harbi'nden sonra muhacirlerle beraber kalabalıklaşmaya başlamış ve gelişmiştir.
+      Eskişehir’in asıl gelişmesi ise demiryolunun işletmeye açılmasından sonra olmuştur.</p>
+
+    <h4>Şehre Ait Bilgiler:</h4>
+
+    <ul>
+      <li>Bölge: İç Anadolu Bölgesi</li>
+      <li>Nüfus: 915.000</li>
+      <li>Rakım: 788m</li>
+      <li>Yüzölçümü: 13.652 km²</li>
+      <li>İklim: Karasal İklim </li>
+    </ul>
+
+    <h4>Gezilebilecek Yerler:</h4>
+    <h5>Müzeler:</h5>
+    <ul>
+      <li>Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
+      <li>Eti Arkeoloji Müzesi</li>
+      <li>Cumhuriyet Tarihi Müzesi</li>
+      <li>Hava Müzesi</li>
+      <li>Demiryolları Müzesi</li>
+      <li>Tülomsaş Müzesi</li>
+      <li>ESOGÜ Zooloji Müzesi</li>
+    </ul>
+    <h5>Parklar</h5>
+    <ul>
+      <li>Sazova Park</li>
+      <li>Dede Korkut Parkı</li>
+      <li>Kent Park</li>
+      <li>Şelale Park</li>
+      <li>Anıt Park</li>
+      <li>Kanlıkavak Parkı</li>
+    </ul>
+    <h5>Alışveriş Merkezleri</h5>
+    <ul>
+      <li>Espark Avm</li>
+      <li>Kanatlı Avm</li>
+      <li>Özdilek Avm</li>
+      <li>Vega Avm</li>
+    </ul>
+    <h5>Mesire Alanları</h5>
+    <ul>
+      <li>Regülatör Piknik Alanı</li>
+      <li>Şehr-i Derya Park</li>
+      <li>Musaözü Tabiat Parkı</li>
+      <li>Kent Ormanı</li>
+      <li>Orman Fidanlığı</li>
+    </ul>
+  </div>
+
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/eskfoto/kanlikavak.webp" class="d-block w-100" alt="...">
       </div>
-    <script>
-     var sidemeu = document.getElementById("sidemenu");
+      <div class="carousel-item">
+        <img src="images/eskfoto/odunpazarıev.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/eskfoto/sazova main.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/eskfoto/sazova.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <script>
+    var sidemeu = document.getElementById("sidemenu");
 
 
-     function openmenu(){
-        sidemeu.style.right="0";
-     }
-     function closemenu(){
-        sidemeu.style.right="-200px";
-     }
+    function openmenu() {
+      sidemeu.style.right = "0";
+    }
+    function closemenu() {
+      sidemeu.style.right = "-200px";
+    }
 
-</script>
+  </script>
 </body>
 
 </html>
