--- a/webproject/sehrimiz.html
+++ b/webproject/sehrimiz.html
@@ -75,7 +75,7 @@
     </ul>
 
     <h4>Gezilebilecek Yerler:</h4>
-    <h5>Müzeler:</h5>
+    <h5>Müzeler</h5>
     <ul>
       <li>Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
       <li>Eti Arkeoloji Müzesi</li>
@@ -108,6 +108,21 @@
       <li>Musaözü Tabiat Parkı</li>
       <li>Kent Ormanı</li>
       <li>Orman Fidanlığı</li>
+    </ul>
+    <h5>Camiler</h5>
+    <ul>
+      <li>Reşadiye Cami</li >
+      <li>Çarşı Cami</li>
+      <li>Kurşunlu Küliyesi</li>
+      <li>Alaaddin Cami</li>
+      <li>Tiryakizade Cami</li>
+    </ul>
+    <h4>Yöresel Lezzetleri</h4>
+    <ul>
+      <li>Çibörek</li>
+      <li>Balaban Kebap</li>
+      <li>Haşhaşlı Gözleme</li>
+      <li>Met Helvası</li>
     </ul>
   </div>
 
