--- a/webproject/cv.html
+++ b/webproject/cv.html
@@ -62,6 +62,17 @@
             <span class="badge bg-primary rounded-pill">2023-devam</span>
         </li>
     </ul>
+    <h2 class="special-heading">1. Ahmet Sezer İlköğretim Okulu</h2>
+    <img src="images/ortaokul.jpg">
+    <h2 class="special-heading">2. Atatürk Lisesi</h2>
+    <img src="images/lise.jpg">
+    <h2 class="special-heading">3. Sakarya Üniversitesi</h2>
+
+    <div class="image-container">
+        <img id="university-img" src="images/timthumb.jpeg" width="500" height="400">
+        <img id="door" src="images/kapı.jpg" width="500" height="400">
+
+    </div>
     <script>
 
 
