--- a/webproject/sehrimiz.html
+++ b/webproject/sehrimiz.html
@@ -74,7 +74,7 @@
       <li>İklim: Karasal İklim </li>
     </ul>
 
-    <h4>Gezilebilecek Yerler:</h4>
+    <h4 id="gezi">Gezilebilecek Yerler:</h4>
     <h5>Müzeler</h5>
     <ul>
       <li>Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
