--- a/webproject/sehrimiz.html
+++ b/webproject/sehrimiz.html
@@ -87,11 +87,9 @@
     </ul>
     <ul id="gezi-balmumu">
       <li><img src="images/balmuu müzesi.jpeg" alt="Müze 1"> Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
-      <!-- Diğer liste öğeleri için aynı şekilde devam edebilirsiniz -->
+      <!-- Diğer liste öğeleri 1854için aynı şekilde devam edebilirsiniz -->
     </ul>
-    <ul id="gezi-areko">
-      <li><img src="images/arkeo.jpg" alt="">Eti Arkeoloji Müzesi</li>
-    </ul>
+
     <h5>Parklar</h5>
     <ul>
       <li>Sazova Park</li>
