--- a/webproject/sehrimiz.html
+++ b/webproject/sehrimiz.html
@@ -75,99 +75,149 @@
     </ul>
 
     <h4 id="gezi">Gezilebilecek Yerler:</h4>
-    <h5>Müzeler</h5>
-    <ul>
-      <li>Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
-      <li>Eti Arkeoloji Müzesi</li>
-      <li>Cumhuriyet Tarihi Müzesi</li>
-      <li>Hava Müzesi</li>
-      <li>Demiryolları Müzesi</li>
-      <li>Tülomsaş Müzesi</li>
-      <li>ESOGÜ Zooloji Müzesi</li>
-    </ul>
-    <ul id="gezi-balmumu">
-      <li><img src="images/balmuu müzesi.jpeg" alt="Müze 1"> Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
-      <!-- Diğer liste öğeleri 1854için aynı şekilde devam edebilirsiniz -->
-    </ul>
-
-    <h5>Parklar</h5>
-    <ul>
-      <li>Sazova Park</li>
-      <li>Dede Korkut Parkı</li>
-      <li>Kent Park</li>
-      <li>Şelale Park</li>
-      <li>Anıt Park</li>
-      <li>Kanlıkavak Parkı</li>
-    </ul>
-    <h5>Alışveriş Merkezleri</h5>
-    <ul>
-      <li>Espark Avm</li>
-      <li>Kanatlı Avm</li>
-      <li>Özdilek Avm</li>
-      <li>Vega Avm</li>
-    </ul>
-    <h5>Mesire Alanları</h5>
-    <ul>
-      <li>Regülatör Piknik Alanı</li>
-      <li>Şehr-i Derya Park</li>
-      <li>Musaözü Tabiat Parkı</li>
-      <li>Kent Ormanı</li>
-      <li>Orman Fidanlığı</li>
-    </ul>
-    <h5>Camiler</h5>
-    <ul>
-      <li>Reşadiye Cami</li >
-      <li>Çarşı Cami</li>
-      <li>Kurşunlu Küliyesi</li>
-      <li>Alaaddin Cami</li>
-      <li>Tiryakizade Cami</li>
-    </ul>
-    <h4>Yöresel Lezzetleri</h4>
-    <ul>
-      <li>Çibörek</li>
-      <li>Balaban Kebap</li>
-      <li>Haşhaşlı Gözleme</li>
-      <li>Met Helvası</li>
-    </ul>
+  <h5>Müzeler</h5>
+  <div class="content-section">
+    <div class="text">
+      <ul>
+        <li>Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
+        <li>Eti Arkeoloji Müzesi</li>
+        <li>Cumhuriyet Tarihi Müzesi</li>
+        <li>Hava Müzesi</li>
+        <li>Demiryolları Müzesi</li>
+        <li>Tülomsaş Müzesi</li>
+        <li>ESOGÜ Zooloji Müzesi</li>
+      </ul>
+    </div>
+    <div class="image">
+      <img src="images/hava.jpg" alt="Müzeler">
+      <div class="image-caption">Havacılık Müzesi</div>
+    </div>
   </div>
 
-
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-        aria-label="Slide 3"></button>
+  <h5>Parklar</h5>
+  <div class="content-section">
+    <div class="text">
+      <ul>
+        <li>Sazova Park</li>
+        <li>Dede Korkut Parkı</li>
+        <li>Kent Park</li>
+        <li>Şelale Park</li>
+        <li>Anıt Park</li>
+        <li>Kanlıkavak Parkı</li>
+      </ul>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/eskfoto/kanlikavak.webp" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/eskfoto/odunpazarıev.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/eskfoto/sazova main.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/eskfoto/sazova.jpg" class="d-block w-100" alt="...">
-      </div>
+    <div class="image">
+      <img src="images/SAZOVA.jpg" alt="Parklar">
+      <div class="image-caption">Sazova Park</div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
+
+  <h5>Alışveriş Merkezleri</h5>
+  <div class="content-section">
+    <div class="text">
+      <ul>
+        <li>Espark Avm</li>
+        <li>Kanatlı Avm</li>
+        <li>Özdilek Avm</li>
+        <li>Vega Avm</li>
+        <li>Cassaba Modern</li>
+      </ul>
+    </div>
+    <div class="image">
+      <img src="images/espark.jpg" alt="Alışveriş Merkezleri">
+      <div class="image-caption">Espark AVM</div>
+    </div>
+  </div>
+
+  <h5>Mesire Alanları</h5>
+  <div class="content-section">
+    <div class="text">
+      <ul>
+        <li>Regülatör Piknik Alanı</li>
+        <li>Şehr-i Derya Park</li>
+        <li>Musaözü Tabiat Parkı</li>
+        <li>Kent Ormanı</li>
+        <li>Orman Fidanlığı</li>
+        <li>Çatacık Ormanı</li>
+        <li>Eski Göleti Mesire Alanı</li>
+      </ul>
+    </div>
+    <div class="image">
+      <img src="images/sehriderya.jpg" alt="Mesire Alanları">
+      <div class="image-caption">Şehr-i Derya Park</div>
+    </div>
+  </div>
+
+  <h5>Camiler</h5>
+  <div class="content-section">
+    <div class="text">
+      <ul>
+        <li>Reşadiye Cami</li >
+        <li>Çarşı Cami</li>
+        <li>Kurşunlu Küliyesi</li>
+        <li>Alaaddin Cami</li>
+        <li>Tiryakizade Cami</li>
+      </ul>
+    </div>
+    <div class="image">
+      <img src="images/reşat.jpg" alt="Camiler">
+      <div class="image-caption">Reşadiye Cami</div>
+    </div>
+  </div>
+
+  <h4>Yöresel Lezzetler</h4>
+  <div class="content-section">
+    <div class="text">
+      <ul>
+        <li>Çibörek</li>
+        <li>Balaban Kebap</li>
+        <li>Haşhaşlı Gözleme</li>
+        <li>Met Helvası</li>
+      </ul>
+    </div>
+    <div class="image">
+      <img src="images/çibörek.jpg" alt="Yöresel Lezzetler">
+      <div class="image-caption">Çibörek</div>
+    </div>
+  </div>
+</div>
+
+
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+      aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+      aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+      aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <a href="#kanlikavak"><img src="images/eskfoto/kanlikavak.webp" class="d-block w-100" alt="..."></a>
+    </div>
+    <div class="carousel-item">
+      <a href="#odunpazarıev"><img src="images/eskfoto/odunpazarıev.jpg" class="d-block w-100" alt="..."></a>
+    </div>
+    <div class="carousel-item">
+      <a href="#sazova-main"><img src="images/eskfoto/sazova main.jpg" class="d-block w-100" alt="..."></a>
+    </div>
+    <div class="carousel-item">
+      <a href="#sazova"><img src="images/eskfoto/sazova.jpg" class="d-block w-100" alt="..."></a>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>  
+
   <script>
     var sidemeu = document.getElementById("sidemenu");
 
