--- a/webproject/sehrimiz.html
+++ b/webproject/sehrimiz.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kişisel Portfolio Website</title>
@@ -196,16 +197,16 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <a href="#kanlikavak"><img src="images/eskfoto/kanlikavak.webp" class="d-block w-100" alt="..."></a>
+      <a href="kanlikavak.html"><img src="images/eskfoto/kanlikavak.webp" class="d-block w-100" alt="..."></a>
     </div>
     <div class="carousel-item">
-      <a href="#odunpazarıev"><img src="images/eskfoto/odunpazarıev.jpg" class="d-block w-100" alt="..."></a>
+      <a href="odunpazariev.html"><img src="images/eskfoto/odunpazarıev.jpg" class="d-block w-100" alt="..."></a>
     </div>
     <div class="carousel-item">
-      <a href="#sazova-main"><img src="images/eskfoto/sazova main.jpg" class="d-block w-100" alt="..."></a>
+      <a href="sazova.html"><img src="images/eskfoto/sazova main.jpg" class="d-block w-100" alt="..."></a>
     </div>
     <div class="carousel-item">
-      <a href="#sazova"><img src="images/eskfoto/sazova.jpg" class="d-block w-100" alt="..."></a>
+      <a href="adalar.html"><img src="images/adalarslider.png" class="d-block w-100" alt="..."></a>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
